logins, outs, borrows

--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -21,4 +21,8 @@
      <li><strong>Genres:</strong> {{ num_genres }}</li>
       <li><strong>Novels of the <em>OCCULT</em>:</strong> {{ num_witch_books }}</li>
   </ul>
+
+<p>
+  You have visited this page {{ num_visits }} time{{ num_visits|pluralize }}.
+</p>
 {% endblock %}
