--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -32,7 +32,7 @@
             <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
             {% endif %}
                 <hr>
-            {% if perms.catalog.can_mark_returned %}
+            {% if user.is_staff %}
              <li>Staff</li>
                 <li><a href="{% url 'all-borrowed' %}">All Borrowed</a></li>
             {% endif %}
